Edited the desing background and logo color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <table class="column">
                   <tr>
                     <td style="padding:0 62px 10px;"> 
-                      <a class="logo" href="#" width="180" style="color: black;">Sch<span style="color: #289dcf;">oo</span>lars</a>
+                      <a class="logo" href="#" width="180" style="color: white;">Sch<span style="color: #289dcf;">oo</span>lars</a>
                     </td>
                   </tr>
                 </table>
@@ -46,7 +46,7 @@
       <tr>
         <td>
           <a href="#">
-            <img src="pexels-olia-danilevich-5088022.jpg" alt="" width="600" style="max-width: 100%;">
+            <img src="pexels-olia-danilevich-5088022.jpg" alt="" width="600" style="width: 100%;">
           </a>
         </td>
       </tr>
@@ -62,7 +62,7 @@
                 <p style="color: #777; line-height:25px; padding:5px 0 15px;">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati laboriosam totam praesentium porro adipisci ipsam natus molestias facilis aliquid minima, aspernatur aut, repellendus dicta omnis. Et reprehenderit iusto omnis.
                 </p>
-                <a href="#" class="button" type="button" >visit Us</a>
+                <a href="#" class="button" type="button" >Visit Us</a>
               </td>
             </tr>
           </table>
